--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>SmartMeter App</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-
 <body>
+	<!-- Navigation -->
 		<nav>
 			<ul>
 				<li id="home">Overview</li>
@@ -15,6 +15,7 @@
 				<li id="link-sm-two">Smart Meter Two</li>
 			</ul>
 		</nav>
+		<!-- Ansichten (Übersicht & Detail) -->
 		<main>
 			<h1> SmartMeter Web App</h1>
 			<article id="content">
